--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "1.0.0",
   "description": "A Vue input list component.",
   "files": [
-    "index.js",
     "dist",
-    "src",
     "tailwindcss"
   ],
-  "main": "./dist/input-list.umd.js",
-  "module": "./index.js",
+  "type": "module",
+  "main": "./dist/input-list.umd.cjs",
+  "module": "./dist/input-list.js",
+  "types": "./dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/input-list.js",
+      "require": "./dist/input-list.umd.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
     "dev": "vite",
@@ -40,23 +47,28 @@
     "url": "https://github.com/vue-interface/input-list/issues"
   },
   "homepage": "https://github.com/vue-interface/input-list/docs#readme",
-  "dependencies": {
-    "vue": "^2.6.14"
+  "peerDependencies": {
+    "vue": "^3.0.0"
   },
   "devDependencies": {
-    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@vitejs/plugin-vue": "^3.0.0",
+    "@vue-interface/activity-indicator": "^2.0.0-beta.7",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
     "babel-preset-vue": "^2.0.2",
     "change-case": "^4.1.2",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^8.26.0",
+    "eslint-plugin-vue": "^9.7.0",
     "pascalcase": "^2.0.0",
+    "pinia": "^2.0.23",
     "postcss": "^8.4.6",
     "postcss-functions": "^4.0.2",
     "postcss-hexrgba": "^2.0.1",
     "tailwindcss": "^3.0.18",
-    "vite": "^2.7.2",
-    "vite-plugin-vue2": "^1.9.3"
+    "vite": "^3.0.3",
+    "vite-plugin-dts": "^1.6.6",
+    "vue": "^3.2.41"
   }
 }
