--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@vue-interface/input-list",
-  "version": "1.0.0",
+  "version": "2.0.0-beta.0",
   "description": "A Vue input list component.",
   "files": [
     "dist",
