--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "postcss-functions": "^4.0.2",
     "postcss-hexrgba": "^2.0.1",
     "tailwindcss": "^3.0.18",
+    "typescript": "^4.9.5",
     "vite": "^4.0.0",
     "vite-plugin-dts": "^1.6.6",
     "vue": "^3.2.41"
