--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue-interface/input-field": "^1.0.0-beta.0",
     "autoprefixer": "^10.4.2",
     "change-case": "^4.1.2",
     "eslint": "^8.26.0",
